# IchimanYen

./: CMakeLists.txt  install  install.sh
Documentation/: GraphicalView-diagram.odg  Layer Architecture.odg  match_round_model.odg  pipe_model.odg
Documentation/Report/: English.aux  English.ptc  English.tex  french.aux  french.ptc  french.tex  ichiman-yen.aux  ichiman-yen.ptc  ichiman-yen.tex
pgmtest/: a.out  allways1000  allways1000.c  minus1
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compiling_hundlers.c  compiling_hundlers.h  definition.h  file_menu_hundlers.c  file_menu_hundlers.h  game.c  ichimanyen.c  ichimanyen.h  match.c  raccourcis.c  raccourcis.h  rules_applications.c  rules_applications.h
src/pgm_test_src/: allways1000.c  minus1.c  player2.c  random.c  winner.c
xml/: Run.glade  about.glade  ide.glade  save_as.glade  saver.glade
